# EnviroSentinel

./: .env.development  .env.production  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  run.py  sensor_config.json  sensors.json
data_ingest/: Dockerfile  config.py  run.py
data_ingest/src/: app.py  opensense_service.py  routes.py  sender.py
data_ingest/tests/: test_integration_fetcher.py  test_opensense_service.py  test_routes.py
ingestor/: .env.development  config.py  logger.py  requirements.txt  run.py
ingestor/src/: app.py  blueprint.py  routes.py  sender.py
ingestor/tests/: test_integration_fetcher.py  test_opensense_service.py  test_routes.py
notebooks/: model_fit.ipynb
notebooks/.ipynb_checkpoints/: EDA_SensorData_Report-checkpoint.ipynb
predictor/: .env.example  .env_development  Dockerfile  config.py  logger.py  run.py
predictor/src/: app.py  blueprint.py  config.py  model_service.py  preprocessor.py  routes.py
predictor/src/predictor/: model_service.py  routes.py
predictor/src/shared/: config.py  logger.py
predictor/tests/: test_app.py  test_predictor.py  test_routes.py
predictor/tests/unit/: test_app.py  test_predictor.py  test_routes.py
scripts/: historical_data_fetcher.py
shared/: config.py  logger.py
src/: app.py
src/predictor/: blueprint.py  model_service.py  routes.py
src/shared/: config.py
tests/unit/: test_app.py  test_predictor.py  test_routes.py
training/: training_config.json
training/data/merged_data/: Lake_Barmen.csv  PANGAEAs_SenseBox.csv  (+5 more)
training/notebooks/: model_fit.ipynb  pre_processing.ipynb
training/scripts/: historical_data_fetcher.py  preprocess_and_merge.py
(+1290 files in other folders)
